--- a/orderBeta/mainwindow.ui
+++ b/orderBeta/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1144</width>
-    <height>873</height>
+    <width>1211</width>
+    <height>886</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,20 +38,6 @@
            </size>
           </property>
          </spacer>
-        </item>
-        <item>
-         <widget class="QLabel" name="user">
-          <property name="text">
-           <string>Please login</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="logout">
-          <property name="text">
-           <string>Logout</string>
-          </property>
-         </widget>
         </item>
         <item>
          <widget class="QPushButton" name="exit">
@@ -117,7 +103,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QLineEdit" name="lineEdit"/>
+               <widget class="QLineEdit" name="newscode"/>
               </item>
              </layout>
             </item>
@@ -131,7 +117,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox_2"/>
+               <widget class="QComboBox" name="newmarket"/>
               </item>
              </layout>
             </item>
@@ -140,12 +126,26 @@
               <item>
                <widget class="QLabel" name="label_10">
                 <property name="text">
+                 <string>委託交易</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QComboBox" name="newentype"/>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_13">
+              <item>
+               <widget class="QLabel" name="label_8">
+                <property name="text">
                  <string>委託種類</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox_3"/>
+               <widget class="QComboBox" name="newortype"/>
               </item>
              </layout>
             </item>
@@ -159,7 +159,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox_4"/>
+               <widget class="QComboBox" name="newrequest"/>
               </item>
              </layout>
             </item>
@@ -173,7 +173,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="comboBox"/>
+               <widget class="QComboBox" name="newbuysell"/>
               </item>
              </layout>
             </item>
@@ -187,12 +187,12 @@
                </widget>
               </item>
               <item>
-               <widget class="QLineEdit" name="lineEdit_2"/>
+               <widget class="QLineEdit" name="newenprice"/>
               </item>
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="100,99">
               <item>
                <widget class="QLabel" name="label">
                 <property name="text">
@@ -201,7 +201,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QSpinBox" name="spinBox"/>
+               <widget class="QLineEdit" name="newennum"/>
               </item>
              </layout>
             </item>
@@ -221,7 +221,7 @@
                </spacer>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton_3">
+               <widget class="QPushButton" name="sendNew">
                 <property name="text">
                  <string>送出</string>
                 </property>
@@ -346,7 +346,7 @@
        </spacer>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="50,1,100">
+       <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="40,1,100">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
@@ -377,7 +377,7 @@
         <item>
          <widget class="QTabWidget" name="tabWidget">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Tab_1">
            <attribute name="title">
@@ -409,6 +409,8 @@
    <zorder></zorder>
    <zorder>nowentrust</zorder>
    <zorder>verticalSpacer_3</zorder>
+   <zorder>lineEdit</zorder>
+   <zorder>newortype</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
