--- a/orderBeta/mainwindow.ui
+++ b/orderBeta/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1447</width>
-    <height>886</height>
+    <height>905</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -63,7 +63,7 @@
              </spacer>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="100,99">
+             <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_2">
                 <property name="text">
@@ -77,7 +77,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_10">
+             <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_9">
                 <property name="text">
@@ -91,21 +91,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_11">
-              <item>
-               <widget class="QLabel" name="label_10">
-                <property name="text">
-                 <string>委託交易</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QComboBox" name="newentype"/>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_13">
+             <layout class="QHBoxLayout" name="horizontalLayout_13" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_8">
                 <property name="text">
@@ -119,7 +105,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_12">
+             <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_11">
                 <property name="text">
@@ -133,7 +119,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_3">
                 <property name="text">
@@ -147,7 +133,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="100,99">
+             <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="10,12">
               <item>
                <widget class="QLabel" name="label_4">
                 <property name="text">
@@ -161,7 +147,7 @@
              </layout>
             </item>
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="100,99">
+             <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="10,12">
               <item>
                <widget class="QLabel" name="label">
                 <property name="text">
@@ -257,11 +243,35 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>即時行情</string>
-            </property>
-           </widget>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QLabel" name="label_5">
+              <property name="text">
+               <string>即時行情</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pushButton">
+              <property name="text">
+               <string>新增追蹤</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <widget class="QTableView" name="realtime">
@@ -346,7 +356,7 @@
         <item>
          <widget class="QTabWidget" name="tabWidget">
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Tab_1">
            <attribute name="title">
@@ -376,10 +386,8 @@
     </item>
    </layout>
    <zorder></zorder>
-   <zorder>nowentrust</zorder>
-   <zorder>verticalSpacer_3</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>newortype</zorder>
+   <zorder>horizontalSpacer</zorder>
+   <zorder>pushButton</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
